# libretro-wasm

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
cores/: CMakeLists.txt  libretro_noexcept.c  libretro_shim.c  minicore.c
cores/shims/: inline_stub.h  setjmp.h
native/: CMakeLists.txt  libretro_wasm.c
src/: libretro-host.js
src/cores/: minicore.wasm  quicknes.wasm
test/: libretro.test.js
web/: index.html  libretro-host.js  main.js  wasi.js
